--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -1,8 +1,6 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+    image: edgarknapp/dockerdevenvdemo:latest
     entrypoint:
     - sleep
     - infinity
